src/objects/MUSW__Payable_Receipt__c.object
<CustomObject>
    <fields>
        <fullName>BGBK__Cart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cart used to make the payment using Deposit</description>
        <label>Cart</label>
        <referenceTo>BGBK__Cart__c</referenceTo>
        <relationshipLabel>Payable Receipts</relationshipLabel>
        <relationshipName>Payable_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Amount__c</fullName>
        <description>The amount of the transaction related to a deposit: deposit collection (positive value), transferred in (positive value), transferred out (negative value).</description>
        <label>Amount Collected</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deposit</label>
        <referenceTo>MUSW__Deposit__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Payable_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Receipt__c</fullName>
        <description>Lookup to the receipt record.</description>
        <label>Receipt</label>
        <referenceTo>MUSW__Receipt__c</referenceTo>
        <relationshipLabel>Payables</relationshipLabel>
        <relationshipName>Payable_Receipts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MUSW__Source_Payable_Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System populated when an amount is transferred in from another deposit.</description>
        <label>Source Payable Receipt</label>
        <referenceTo>MUSW__Payable_Receipt__c</referenceTo>
        <relationshipLabel>Payable Receipts</relationshipLabel>
        <relationshipName>Payable_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payable Receipt</label>
    <nameField>
        <displayFormat>PYR-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payable Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>